# DetectorBank

./: AUTHORS  Doxyfile.in  Makefile.am  README  README.md  configure.ac  detectorbank.i  detectorbank.pc.in  doc_fix.py  doxy2swig.py  link_rapidxml.sh  python_docstrings.i  setup.py.in
Docs/: detectorcache-design.doxy  features.doxy  frequencyshifter-operation.doxy  mainpage.doxy  python-examples.doxy  python-usage.doxy  samplerates.doxy  slidingbuffer-example.doxy
docs/: DetectorCacheDesign.html  FeaturesExplained.html  FrequencyShifterOperation.html  PythonExamples.html  PythonUsage.html  SampleRates.html  SlidingBufferExample.html  annotated.html  classAbstractDetector-members.html  classAbstractDetector.html  classAbstractDetector__inherit__graph.map  classAbstractDetector__inherit__graph.md5  classCDDetector-members.html  classCDDetector.html  classCDDetector__coll__graph.map  classCDDetector__coll__graph.md5  classCDDetector__inherit__graph.map  classCDDetector__inherit__graph.md5  classDetectorBank-members.html  classDetectorBank.html  classDetectorBank__coll__graph.map  classDetectorBank__coll__graph.md5  classFrequencyShifter-members.html  classFrequencyShifter.html  classNoteDetector-members.html  classNoteDetector.html  classOnsetDetector-members.html  classOnsetDetector.html  classOnsetDetector__coll__graph.map  classOnsetDetector__coll__graph.md5  classProfileManager-members.html  classProfileManager.html  classRK4Detector-members.html  classRK4Detector.html  classRK4Detector__coll__graph.map  classRK4Detector__coll__graph.md5  classRK4Detector__inherit__graph.map  classRK4Detector__inherit__graph.md5  classThreadPool-members.html  classThreadPool.html  (+162 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+46 more)
dotfiles/: range-copy.dot  slidingbuf-manyseg.dot  slidingbuf-oneseg.dot  two-calls.dot
examples/: example_detectorcache.py  example_frequencyshifter.py  example_getZ_absZ.py  example_onsetdetector.py  example_xml_load.py  example_xml_save.py  slidingbuffertest.cpp  thread_pool-test.cpp
src/: Makefile.am  detectorbank.cpp  detectorbank.h  detectorcache.cpp  detectorcache.h  detectors.cpp  detectors.h  detectortypes.h  eventdetector.cpp  eventdetector.h  frequencyshifter.cpp  frequencyshifter.h  genpitches.py  hilbert.cpp  hilbert.h  notedetector.cpp  notedetector.h  onsetdetector.cpp  onsetdetector.h  pitchtracker.cpp  pitchtracker.h  profilemanager.cpp  profilemanager.h  scale_values.inc  slidingbuffer.h  thread_pool.cpp  thread_pool.h  uniqueallocator.h
test/: Makefile.am  Py_absZtest.py  Py_notedetector_tests.py  Pytests.in  Pytests.py  c++tests-detectorbank.cpp  c++tests-normalizer.cpp  c++tests-notedetector.cpp  tap++.cpp  tap++.h  test_amp_norm.py
test/python_tests/: conftest.py  test_detectorbank.py
test/python_tests/data/: 0.csv  1.csv  hopfskipjump.xml
